# Jam3D

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  build_and_run.sh  build_and_run_debug.sh  build_debug.sh  imgui.ini  run.sh
docs/: architecture.drawio  todo.md
res/: planetile_100x100.xcf  planetile_100x100_transparent.xcf
src/: CMakeLists.txt  application.cpp  application.h  basic3d.shader  box.cpp  box.h  entrypoint.cpp  glwindow.cpp  glwindow.h  indexbuffer.h  jam3d.cpp  jam3d.h  log.cpp  log.h  main.cpp  renderer.cpp  shader.cpp  shader.h  testbox.cpp  testbox.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.h
src/math/: CMakeLists.txt  mathhelper.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.h
src/misc/: CMakeLists.txt  glwindow.cpp  glwindow.h  log.h
src/objects/: CMakeLists.txt  axes.cpp  axes.h  box.cpp  box.h  lightsource.cpp  lightsource.h  plane.cpp  plane.h  shape.cpp  shape.h  sphere.cpp  sphere.h  viewportborders.cpp  viewportborders.h
src/renderer/: CMakeLists.txt  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  glwindow.cpp  glwindow.h  indexbuffer.cpp  indexbuffer.h  orthocamera.cpp  orthocamera.h  perspectivecamera.cpp  perspectivecamera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h  texturecubemap.cpp  texturecubemap.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.h  viewport.cpp  viewport.h
src/resources/: tex_test_full.xcf
src/shaders/: basic.shader  basic3d.shader  shadow.shader
src/shapes/: CMakeLists.txt  axes.cpp  axes.h  box.cpp  box.h  shape.cpp  shape.h  sphere.cpp  sphere.h
src/tests/: CMakeLists.txt  testbox.cpp  testbox.h
src/views/: CMakeLists.txt  gridlayout.cpp  gridlayout.h  objectcreationview.cpp  objectcreationview.h  testview.cpp  testview.h  view.cpp  view.h
